--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "mll-lab/laravel-graphql-playground": "^1.0",
         "nuwave/lighthouse": "^2.6",
         "phaza/laravel-postgis": "^3.5",
-        "sofa/eloquence": "^5.6"
+        "sofa/eloquence": "^5.6",
+        "zircote/swagger-php": "^3.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.6",
